[package]
name = "activities-examples"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
nanoid = "0.4.0"
prost-wkt-types = "0.6.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
temporal-client = { path = "../../sdk-core/client" }
temporal-helpers = { path = "../temporal-helpers" }
temporal-sdk = { path = "../../sdk-core/sdk" }
temporal-sdk-core = { path = "../../sdk-core/core" }
temporal-sdk-core-api = { path = "../../sdk-core/core-api" }
temporal-sdk-core-protos = { path = "../../sdk-core/sdk-core-protos" }
tokio = { version = "1.28.1", features = ["full"] }