[package]
name = "schedule"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.14"
nanoid = "0.4.0"
prost-wkt-types = "0.6.0"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
temporal-client = { git = "https://github.com/gabriel-v/temporalio-sdk-core" }
temporal-helpers = { git = "https://github.com/gabriel-v/temporalio-sdk-core" }
temporal-sdk = { git = "https://github.com/gabriel-v/temporalio-sdk-core" }
temporal-sdk-core = { git = "https://github.com/gabriel-v/temporalio-sdk-core" }
temporal-sdk-core-api = { git = "https://github.com/gabriel-v/temporalio-sdk-core" }
temporal-sdk-core-protos = { git = "https://github.com/gabriel-v/temporalio-sdk-core" }
tokio = { version = "1.28.1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }