[package]
name = "temporal-helpers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
temporal-client = { path = "../../sdk-core/client" }
temporal-sdk = { path = "../../sdk-core/sdk" }
temporal-sdk-core = { path = "../../sdk-core/core" }
temporal-sdk-core-api = { path = "../../sdk-core/core-api" }
temporal-sdk-core-protos = { path = "../../sdk-core/sdk-core-protos" }