[package]
name = "temporal-helpers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
temporal-client = { git = "https://github.com/gabriel-v/temporalio-sdk-core" }
temporal-sdk = { git = "https://github.com/gabriel-v/temporalio-sdk-core" }
temporal-sdk-core = { git = "https://github.com/gabriel-v/temporalio-sdk-core" }
temporal-sdk-core-api = { git = "https://github.com/gabriel-v/temporalio-sdk-core" }
temporal-sdk-core-protos = { git = "https://github.com/gabriel-v/temporalio-sdk-core" }